--- a/App/FEKC/app/src/main/res/values/colors.xml
+++ b/App/FEKC/app/src/main/res/values/colors.xml
@@ -14,7 +14,9 @@
     <color name="reviewNav">#089C28</color>
     <color name="reviewStatus">#07661C</color>
 
-    <color name="colorGreen">#00FF00</color>
-    <color name="colorRed">#FF0000</color>
+    <color name="colorGreen">#1aa134</color>
+    <color name="colorRed">#c71215</color>
+
+
 
 </resources>
