HomeActivity: Populate arcviews

--- a/App/FEKC/app/src/main/res/layout/success_fragment.xml
+++ b/App/FEKC/app/src/main/res/layout/success_fragment.xml
@@ -4,19 +4,44 @@
     android:layout_height="match_parent"
     tools:context=".activity.HomeActivity">
 
-    <com.hookedonplay.decoviewlib.DecoView
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        custom:dv_lineWidth="26dp"
-        android:id="@+id/successArcView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <TextView
+        android:id="@+id/textPercentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="40sp"/>
+
+    <TextView
+        android:id="@+id/arc_view_success_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp"
+        android:text="Success"
+        android:layout_below="@id/textPercentage"/>
+
+    <TextView
+        android:id="@+id/arc_view_success_stats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20sp"
+        android:layout_below="@id/arc_view_success_text"/>
 
     <LinearLayout
         android:id="@+id/viewPagerCountDots"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@id/arc_view_success_stats">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,10 +50,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ic_panorama_fish_eye" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_panorama_fish_eye" />
     </LinearLayout>
+
+    <com.hookedonplay.decoviewlib.DecoView
+        xmlns:custom="http://schemas.android.com/apk/res-auto"
+        custom:dv_lineWidth="26dp"
+        android:id="@+id/successArcView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
