--- a/App/FEKC/app/src/main/res/layout/fragment_task_list.xml
+++ b/App/FEKC/app/src/main/res/layout/fragment_task_list.xml
@@ -15,7 +15,9 @@
             android:id="@+id/my_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"/>
+            android:scrollbars="vertical"
+            android:paddingBottom="70dp"
+            android:clipToPadding="false"/>
     </RelativeLayout>
 
 
