--- a/App/FEKC/app/src/main/res/layout/task_view_row.xml
+++ b/App/FEKC/app/src/main/res/layout/task_view_row.xml
@@ -191,12 +191,36 @@
                         android:id="@+id/task_type_field_data" />
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/Start_Stop"
+                    android:layout_below="@id/Task_deets">
+                    
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true">
+                    <Button
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="5dp"
+                        android:text="Start Activity"
+                        android:background="@color/colorGreen"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/task_view_row_start_button" />
+                    </RelativeLayout>
+
+                </RelativeLayout>
+
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#ccc"
                     android:layout_marginTop="10dp"
-                    android:layout_below="@+id/Task_deets"
+                    android:layout_below="@+id/Start_Stop"
                     android:id="@+id/Delete_Divider"/>
 
                 <RelativeLayout
@@ -219,34 +243,9 @@
                         android:layout_height="30dp"
                         android:layout_toEndOf="@id/delete_task_text"
                         android:src="@drawable/ic_delete_forever"
+                        android:tint="#444"
                         android:id="@+id/delete_icon" />
                 </RelativeLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_below="@+id/deleteLayout"
-                    android:layout_centerInParent="true"
-                    android:id="@+id/task_view_row_dummy_text_view" />
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_below="@+id/deleteLayout"
-                        android:layout_toLeftOf="@+id/task_view_row_dummy_text_view"
-                        android:layout_marginRight="2dp"
-                        android:text="Start"
-                        android:id="@+id/task_view_row_start_button" />
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginLeft="2dp"
-                        android:layout_below="@+id/deleteLayout"
-                        android:layout_toRightOf="@id/task_view_row_dummy_text_view"
-                        android:text="Stop"
-                        android:id="@+id/task_view_row_stop_button" />
 
 
             </RelativeLayout>
