--- a/App/FEKC/app/src/main/res/layout/failure_fragment.xml
+++ b/App/FEKC/app/src/main/res/layout/failure_fragment.xml
@@ -5,7 +5,7 @@
     tools:context=".activity.HomeActivity">
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true">
         <TextView
