Change Time to 12 hour format for Schedule Based Task and make save button instead of Review

--- a/App/FEKC/app/src/main/res/layout/task_schedule_based.xml
+++ b/App/FEKC/app/src/main/res/layout/task_schedule_based.xml
@@ -15,9 +15,25 @@
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/scheduleTaskNav">
-        <include layout="@layout/activity_schedule_based_task" />
-
+        android:layout_height="60dp"
+        android:background="@color/reviewNav"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/save_button">
+        <TextView
+            android:id="@+id/add_task_save_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save Task"
+            android:textSize="20dp"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorWhite"
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/scheduleTaskNav"
+        android:layout_above="@id/save_button">
+        <include layout="@layout/activity_schedule_based_task" />
+    </ScrollView>
 </RelativeLayout>
